# rag-pipeline

./: README.md  main.py  pyproject.toml
scrapers/: utils.py  web_scraper.py
