[project]
name = "rag-pipeline"
version = "0.1.0"
description = "RAG Pipeline - Retrieval-Augmented Generation data collection system"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.31.0", # Web scraping and HTTP requests
    "beautifulsoup4>=4.12.0", # HTML parsing
    "pydantic>=2.0.0", # Data validation
    "python-dotenv>=1.0.0", # Environment variable management
    "pyyaml>=6.0", # YAML configuration
    "playwright>=1.56.0",
    "html2text>=2025.4.15",
]

[project.optional-dependencies]
pdf = ["pypdf>=4.0.0", "pdfplumber>=0.10.0"]
video = ["yt-dlp>=2023.0.0", "moviepy>=1.0.0"]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "black>=23.0.0", "ruff>=0.1.0"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
